--- a/projekt01/style.css
+++ b/projekt01/style.css
@@ -83,6 +83,7 @@ h3{
     color: var(--text);
 }
 #header{
+    display: none;
     font-size: 40px;
     text-align: center;
     position:absolute;
@@ -222,15 +223,21 @@ h3{
 }
 
 #answer{
-    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0px 0px 50px  var(--light-gray);    
     width: max-content;
     border-radius: 20px;
-    background-color: green;
     color: white;
     padding: 20px;
     font-size: 30px;
+}
+
+#answer.win{
+    background-color: rgb(29, 120, 29);
+}
+#answer.lose{
+    background-color: rgb(63, 63, 63);
 }
