--- a/projekt01/style.css
+++ b/projekt01/style.css
@@ -93,7 +93,7 @@ h3{
 }
 
 #main-container{
-    width: 450px;
+    width: 100%;
 }
 
 #board{
@@ -104,11 +104,12 @@ h3{
     display: flex;
     flex-wrap: wrap;
 }
+
 .tile{
     /*box*/
     border: 2px solid var(--light-gray);
-    width: 60px;
     height: 60px;
+    width: 60px;
     margin: 2.5px;
     /*text*/
     font-size: 36px;
@@ -116,6 +117,22 @@ h3{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.animation{
+    animation: flipInX 1s ease-in-out;
+    transform-origin: center center; /* Punkt transformacji ustawiony na środek dolnej krawędzi elementu */
+}
+
+@keyframes flipInX {
+    from {
+        opacity: 0;
+        transform: rotateX(90deg);
+    }
+    to {
+        opacity: 1;
+        transform: rotateX(0);
+    }
 }
 
 .keyboard {
