--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* DEFINICJA KOLORÓW */
 :root {
     --background:#ffffff;
     --menu:#E3E3E1;
@@ -7,6 +8,7 @@
     --green:#6ba863;
     --yellow:#d4b434;
 }
+/* STYLE GŁÓWNYCH ELEMENTÓW */
 body {
     background-color: var(--background);
     color: var(--text);
@@ -49,8 +51,11 @@ h3{
 #date-time{
     font-weight:bolder;
 }
+/* STYLE DOTYCZĄCE STRONY POCZĄTKOWEJ */
+/* STYLE PRZYCISKÓW MENU POCZĄTKOWEGO */
 .startButton{
     background-color: var(--menu);
+    color: var(--text);
     border: 1px solid var(--text);
     cursor: pointer;
     min-width: 140px;
@@ -66,6 +71,7 @@ h3{
     background-color: var(--text);
     color: var(--background);
 }
+/* STYLE GÓRNEGO PASKA NAWIGACJI */
 .navbar {
     height: 10%;
     overflow: hidden;
@@ -85,6 +91,8 @@ h3{
     font-size: 24px;
     color: var(--text);
 }
+
+/* STYLE DOTYCZĄCE PANELU GRY */
 #header{
     display: none;
     font-size: 40px;
@@ -94,11 +102,9 @@ h3{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
 #main-container{
     width: 100%;
 }
-
 #board{
     width: 350px;
     height: 420px;
@@ -107,7 +113,6 @@ h3{
     display: flex;
     flex-wrap: wrap;
 }
-
 .tile{
     /*box*/
     border: 2px solid var(--light-gray);
@@ -121,12 +126,10 @@ h3{
     justify-content: center;
     align-items: center;
 }
-
 .flipanimation{
     animation: flipInX 1s ease-in-out;
     transform-origin: center center; /* Punkt transformacji ustawiony na środek dolnej krawędzi elementu */
 }
-
 @keyframes flipInX {
     from {
         opacity: 0;
@@ -137,12 +140,10 @@ h3{
         transform: rotateX(0);
     }
 }
-
 .shakeanimation{
     position: relative;
     animation: moveLeftToRight 0.5s linear; /* Adjust duration and timing function as needed */
 }
-
 @keyframes moveLeftToRight {
     0% {
         transform: translateX(0);
@@ -160,8 +161,6 @@ h3{
         transform: translateX(0);
       }
   }
-
-
 .keyboard {
     width: 800px;
     height: 550px;
@@ -169,8 +168,7 @@ h3{
     display: flex;
     flex-direction: column; /* Change to a column layout for rows */
     align-items: center; /* Center rows vertically */
-}
-  
+}  
 .keyboard-row {
     width: max-content;
     display: flex;
@@ -180,7 +178,6 @@ h3{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
 .key-tile{
     background-color: var(--light-gray);
     border-radius: 5px;
@@ -194,7 +191,6 @@ h3{
     align-items: center;
     cursor: pointer;
 }
-
 .enter-key-tile{
     background-color: var(--light-gray);
     border-radius: 5px;
@@ -209,25 +205,22 @@ h3{
     align-items: center;
     cursor: pointer;
 }
-
 .correct{
     background-color: var(--green);
     color: white;
     border-color: white;
 }
-
 .present{
     background-color: var(--yellow);
     color: white;
     border-color: white;
 }
-
 .absent{
     background-color: var(--dark-gray);
     color: white;
     border-color: white;
 }
-
+/* STYLE DOTYCZĄCE POPUPÓW WYŚWIETLANYCH PO SKORZYSTANIU Z PASKA NAWIGACJI */
 .popup {
     display: none;
     height: 90%;
@@ -260,13 +253,16 @@ h3{
 .popup li{
     font-size: 15px;
 }
+.popup img{
+    height: 45px;
+}
 .popup h3{
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 15px;
 }
-
-#answer{
+/* STYLE DOTYCZĄCE POPUPÓW WYŚWIETLANYCH DYNAMICZNIE W TRAKCIE GRY */
+.answer{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -278,10 +274,21 @@ h3{
     padding: 20px;
     font-size: 30px;
 }
-
-#answer.win{
+.answer.win{
     background-color: var(--green) ;
 }
-#answer.lose{
+.answer.lose{
     background-color: var(--dark-gray);
+}
+.answer.replay-button{
+    background-color: var(--dark-gray);
+    color: var(--background);
+    top: 60%;
+    margin-top: 10px;
+    border-width: 0; 
+    width: 40px;
+    height: 40px;
+    padding: 0px;
+    border-radius: 50%;
+    cursor: pointer;
 }
