--- a/style.css
+++ b/style.css
@@ -1,294 +1,332 @@
 /* DEFINICJA KOLORÓW */
 :root {
-    --background:#ffffff;
-    --menu:#E3E3E1;
-    --light-gray:#d4d4d4;
-    --dark-gray:#969696;
-    --text:#000000;
-    --green:#6ba863;
-    --yellow:#d4b434;
+	--background: #ffffff;
+	--menu: #e3e3e1;
+	--light-gray: #d4d4d4;
+	--dark-gray: #969696;
+	--darker-gray: #797979;
+	--text: #000000;
+	--green: #6ba863;
+	--darker-green: rgb(79, 124, 73);
+	--yellow: #d4b434;
 }
 /* STYLE GŁÓWNYCH ELEMENTÓW */
 body {
-    background-color: var(--background);
-    color: var(--text);
-    font-family: 'Montserrat', sans-serif;
-  }
-.container {
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+	background-color: var(--background);
+	color: var(--text);
+	font-family: "Montserrat", sans-serif;
 }
-#menu-container{
-    width: 100%;
-    height: 100%;
-    top: 50%;
-    background-color: var(--menu);
+.container {
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 55%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+#menu-container {
+	width: 100%;
+	height: 100%;
+	top: 50%;
+	background-color: var(--menu);
 }
 .container img {
-    padding-top: 10%;
+	padding-top: 10%;
 }
-h1{
-    font-family: 'Noto Serif Display', serif;
-    font-size: 50px;
-    font-weight:bolder;
-    margin: 0px 0px 0px 0px;
+h1 {
+	font-family: "Noto Serif Display", serif;
+	font-size: 50px;
+	font-weight: bolder;
+	margin: 0px 0px 0px 0px;
 }
-h2{
-    font-size: 30px;
-    font-weight:lighter;
-    margin: 5px 0px 5px 0px;
+h2 {
+	font-size: 30px;
+	font-weight: lighter;
+	margin: 5px 0px 5px 0px;
 }
-h3{
-    font-size: 15px;
-    font-weight:lighter;
-    margin: 0px 0px 0px 0px;
+h3 {
+	font-size: 15px;
+	font-weight: lighter;
+	margin: 0px 0px 0px 0px;
 }
-#date-time{
-    font-weight:bolder;
+#date-time {
+	font-weight: bolder;
 }
 /* STYLE DOTYCZĄCE STRONY POCZĄTKOWEJ */
 /* STYLE PRZYCISKÓW MENU POCZĄTKOWEGO */
-.startButton{
-    background-color: var(--menu);
-    color: var(--text);
-    border: 1px solid var(--text);
-    cursor: pointer;
-    min-width: 140px;
-    width: 15%;
-    border-radius: 40px;
-    padding: 20px 32px;
-    margin: 30px 10px ;
-    text-align: center;
-    font-size: 16px;  
-    font-family: 'Montserrat', sans-serif; 
+
+.startButton {
+	background-color: var(--menu);
+	color: var(--text);
+	border: 1px solid var(--text);
+	cursor: pointer;
+	min-width: 140px;
+	width: 15%;
+	border-radius: 40px;
+	padding: 20px 32px;
+	margin: 30px 10px;
+	text-align: center;
+	font-size: 16px;
+	font-family: "Montserrat", sans-serif;
 }
-#startGame{
-    background-color: var(--text);
-    color: var(--background);
+#startGame {
+	background-color: var(--text);
+	color: var(--background);
 }
 /* STYLE GÓRNEGO PASKA NAWIGACJI */
 .navbar {
-    height: 10%;
-    overflow: hidden;
-    padding-right: 10%;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    border-bottom: 1px solid var(--light-gray);
+	height: 10%;
+	overflow: hidden;
+	padding-right: 10%;
+	padding-bottom: 15px;
+	padding-top: 15px;
+	border-bottom: 1px solid var(--light-gray);
 }
 .iconButton {
-    float: right;
-    background: none;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
+	float: right;
+	background: none;
+	border: none;
+	padding: 10px;
+	cursor: pointer;
 }
 .navbar i {
-    font-size: 24px;
-    color: var(--text);
+	font-size: 24px;
+	color: var(--text);
 }
 
 /* STYLE DOTYCZĄCE PANELU GRY */
-#header{
-    display: none;
-    font-size: 40px;
-    text-align: center;
-    position:absolute;
-    top: 50px;
-    left: 50%;
-    transform: translate(-50%, -50%);
+#header {
+	display: none;
+	font-size: 40px;
+	text-align: center;
+	position: absolute;
+	top: 50px;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
-#main-container{
-    width: 100%;
+#main-container {
+	width: 100%;
 }
-#board{
-    width: 350px;
-    height: 420px;
-    margin: 0 auto;
-    margin-top: 3px;
-    display: flex;
-    flex-wrap: wrap;
+#board {
+	width: 350px;
+	height: 420px;
+	margin: 0 auto;
+	margin-top: 3px;
+	display: flex;
+	flex-wrap: wrap;
 }
-.tile{
-    /*box*/
-    border: 2px solid var(--light-gray);
-    height: 60px;
-    width: 60px;
-    margin: 2.5px;
-    /*text*/
-    font-size: 36px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.tile {
+	/*box*/
+	border: 2px solid var(--light-gray);
+	height: 60px;
+	width: 60px;
+	margin: 2.5px;
+	/*text*/
+	font-size: 36px;
+	font-weight: bold;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-.flipanimation{
-    animation: flipInX 1s ease-in-out;
-    transform-origin: center center; /* Punkt transformacji ustawiony na środek dolnej krawędzi elementu */
+.flipanimation {
+	animation: flipInX 1s ease-in-out;
+	transform-origin: center center; /* Punkt transformacji ustawiony na środek dolnej krawędzi elementu */
 }
 @keyframes flipInX {
-    from {
-        opacity: 0;
-        transform: rotateX(90deg);
-    }
-    to {
-        opacity: 1;
-        transform: rotateX(0);
-    }
+	from {
+		opacity: 0;
+		transform: rotateX(90deg);
+	}
+	to {
+		opacity: 1;
+		transform: rotateX(0);
+	}
 }
-.shakeanimation{
-    position: relative;
-    animation: moveLeftToRight 0.5s linear; /* Adjust duration and timing function as needed */
+.shakeanimation {
+	position: relative;
+	animation: moveLeftToRight 0.5s linear; /* Adjust duration and timing function as needed */
 }
 @keyframes moveLeftToRight {
-    0% {
-        transform: translateX(0);
-      }
-      25% {
-        transform: translateX(-5px);
-      }
-      50% {
-        transform: translateX(5px);
-      }
-      75% {
-        transform: translateX(-5px);
-      }
-      100% {
-        transform: translateX(0);
-      }
-  }
+	0% {
+		transform: translateX(0);
+	}
+	25% {
+		transform: translateX(-5px);
+	}
+	50% {
+		transform: translateX(5px);
+	}
+	75% {
+		transform: translateX(-5px);
+	}
+	100% {
+		transform: translateX(0);
+	}
+}
 .keyboard {
-    width: 800px;
-    height: 550px;
-    margin-top: 3px;
-    display: flex;
-    flex-direction: column; /* Change to a column layout for rows */
-    align-items: center; /* Center rows vertically */
-}  
+	width: 800px;
+	height: 550px;
+	margin-top: 3px;
+	display: flex;
+	flex-direction: column; /* Change to a column layout for rows */
+	align-items: center; /* Center rows vertically */
+}
 .keyboard-row {
-    width: max-content;
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    bottom: -35px;
-    left: 50%;
-    transform: translate(-50%, -50%);
+	width: max-content;
+	display: flex;
+	flex-wrap: wrap;
+	position: relative;
+	bottom: -35px;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
-.key-tile{
-    background-color: var(--light-gray);
-    border-radius: 5px;
-    width: 50px;
-    height: 50px;
-    margin: 3px;
-    font-size: 20px;
-    font-weight: bolder;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+.key-tile {
+	background-color: var(--light-gray);
+	border-radius: 5px;
+	width: 50px;
+	height: 50px;
+	margin: 3px;
+	font-size: 20px;
+	font-weight: bolder;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
 }
-.enter-key-tile{
-    background-color: var(--light-gray);
-    border-radius: 5px;
-    width: 100px;
-    height: 50px;
-    margin: 3px;
+.enter-key-tile {
+	background-color: var(--light-gray);
+	border-radius: 5px;
+	width: 100px;
+	height: 50px;
+	margin: 3px;
 
-    font-size: 20px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+	font-size: 20px;
+	font-weight: bold;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
 }
-.correct{
-    background-color: var(--green);
-    color: white;
-    border-color: white;
+.correct {
+	background-color: var(--green);
+	color: white;
+	border-color: white;
 }
-.present{
-    background-color: var(--yellow);
-    color: white;
-    border-color: white;
+.present {
+	background-color: var(--yellow);
+	color: white;
+	border-color: white;
 }
-.absent{
-    background-color: var(--dark-gray);
-    color: white;
-    border-color: white;
+.absent {
+	background-color: var(--dark-gray);
+	color: white;
+	border-color: white;
 }
 /* STYLE DOTYCZĄCE POPUPÓW WYŚWIETLANYCH PO SKORZYSTANIU Z PASKA NAWIGACJI */
 .popup {
-    display: none;
-    height: 90%;
-    width: 450px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--background);
-    box-shadow: 0px 0px 50px  var(--light-gray);
-    text-align: left;
-    padding-left: 20px;
+	display: none;
+	height: 90%;
+	max-width: 450px;
+	width: 90%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: var(--background);
+	box-shadow: 0px 0px 50px var(--light-gray);
+	text-align: left;
+	padding-left: 20px;
 }
-#closeButton{
-    padding: 20px;
-    font-size: 20px;
-    display: block;
+#closeButton {
+	padding: 20px;
+	font-size: 20px;
+	display: block;
 }
-.popup h1{
-    padding-top: 70px;
-    font-size: 30px;
-    font-weight:bolder;
+.popup h1 {
+	padding-top: 70px;
+	font-size: 30px;
+	font-weight: bolder;
 }
-.popup h2{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 20px;
-    font-weight:bold;
+.popup h2 {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-size: 20px;
+	font-weight: bold;
 }
-.popup li{
-    font-size: 15px;
+.popup li {
+	font-size: 15px;
 }
-.popup img{
-    height: 45px;
+.popup img {
+	height: 45px;
 }
-.popup h3{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 15px;
+.popup h3 {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-size: 15px;
 }
 /* STYLE DOTYCZĄCE POPUPÓW WYŚWIETLANYCH DYNAMICZNIE W TRAKCIE GRY */
-.answer{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 0px 0px 50px  var(--light-gray);    
-    width: max-content;
-    border-radius: 20px;
-    color: white;
-    padding: 20px;
-    font-size: 30px;
+.answer {
+	position: absolute;
+	bottom: 5%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	box-shadow: 0px 0px 50px var(--light-gray);
+	width: max-content;
+	border-radius: 20px;
+	color: white;
+	padding: 20px;
+	font-size: 30px;
 }
-.answer.win{
-    background-color: var(--green) ;
+.answer.win {
+	background-color: var(--darker-green);
 }
-.answer.lose{
-    background-color: var(--dark-gray);
+.answer.lose {
+	background-color: var(--darker-gray);
 }
-.answer.replay-button{
-    background-color: var(--dark-gray);
-    color: var(--background);
-    top: 60%;
-    margin-top: 10px;
-    border-width: 0; 
-    width: 40px;
-    height: 40px;
-    padding: 0px;
-    border-radius: 50%;
-    cursor: pointer;
+.answer.replay-button {
+	background-color: var(--darker-gray);
+	color: var(--background);
+	bottom: 0%;
+	margin-top: 10px;
+	border-width: 0;
+	width: 40px;
+	height: 40px;
+	padding: 0px;
+	border-radius: 50%;
+	cursor: pointer;
+}
+@media (max-width: 570px) {
+	h1,h2{
+		margin: 10px 30px 10px 30px;	
+	}
+	h3{
+		margin:10px;	
+	}
+	#header {
+		margin: 0px;
+		position: absolute;
+		top: 15px;
+		left: 20px;
+		transform: none;
+	}
+	.navbar {
+		border-bottom: none;
+	}
+	.startButton {
+		width: 80%;
+		margin-top: 10px;
+		margin-bottom: 10px;
+		/* background-color: red; Add a background color for testing */
+	}
+	.key-tile {
+		width: 32px;
+		margin: 2px;
+	}
+	.enter-key-tile {
+		width: 60px;
+	}
+	.popup {
+		width: 90%;
+	}
 }
